src/test/deca/context/valid/ClassMathode5.deca
// Description:
//    Constructeur objet
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
{
    Object a = new Object();
    
}