src/test/deca/context/invalid/class.deca
class A1{}
class A2{}


{
A1 a=new A1();    
A2 a=new A2();    

}